--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
 						<li><a class="button alt">PROJECTS</a></li>
 					</ul>
 				<div class="inner">
+				<div class="spotlight">
+						<div class="image">
+							<a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank"><img src="images/onlineBulk.jpg" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a href="http://goo.gl/sgG9Ey" target="_blank">One Desire</a></h3>
+							<p>Developed using PHP </p>
+							<p>NB/Allows a user to send bulk SMS online.</p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div>
 					<div class="spotlight">
 						<div class="image">
 							<a href="http://nyerientrepreneurshipforum.org" target="_blank"><img src="images/nyeri.jpg" alt="" /></a>
