--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank"><img src="images/onlineBulk.jpg" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="http://goo.gl/sgG9Ey" target="_blank">Bulk SMS Sytem</a></h3>
+							<h3><a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank">Bulk SMS Sytem</a></h3>
 							<p>Developed using PHP </p>
 							<p>Allows a user to send bulk SMS online.</p>
 							<ul class="actions">
