Add triumph website to portfolio

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 				<div class="inner">
 				<div class="spotlight">
 						<div class="image">
+							<a href="http://triumphinchristministries.or.ke" target="_blank"><img src="images/triumphWebsite.png" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank">Triumph Church Website</a></h3>
+							<p>Developed using WordPress </p>
+							<p>Website for organization</p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div>
+				<div class="spotlight">
+						<div class="image">
 							<a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank"><img src="images/onlineBulk.jpg" alt="" /></a>
 						</div>
 						<div class="content">
