--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<a href="http://triumphinchristministries.or.ke" target="_blank"><img src="images/triumphWebsite.png" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank">Triumph Church Website</a></h3>
+							<h3><a href="http://triumphinchristministries.or.ke" target="_blank">Triumph Church Website</a></h3>
 							<p>Developed using WordPress </p>
 							<p>Website for organization</p>
 							<ul class="actions">
