modify the iframe for the app

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -51,18 +51,19 @@
 					<ul class="actions special">
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
-					<iframe src="http://johnmwenda.github.io/AngularJS-app/www/">
+					<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" style="width:300px;height:700px;">
 					  <p>Your browser does not support iframes.</p>
 					</iframe>
 					</section>
 					
 					<section>
-						<h3>Skills</h3>
+						<h3>Technologies used</h3>
 						<ul class="checklist">
-							<li>PHP, and the Laravel framework</li>
-							<li>Joomla</li>
-							<li>Java</li>
-							<li>CSS, HTML</li>
+							<li>API Engine - CodeIgniter</li>
+							<li>Mobile framework - Ionic framework v1.3</li>
+							<li>Main language used is AngularJS</li>
+							<li>Most of the underlying CSS is predefined by Ionic Framework buto i created custom CSS to adopt to my app designs </li>
+							<li>Development methodology - Modular development</li>
 						</ul>
 					</section>
 					
