modify the iframe for the app

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -51,7 +51,7 @@
 					<ul class="actions special">
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
-					<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" frameborder="4px" style="width:400px;height:600px;">
+					<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  frameborder="4px">
 					  <p>Your browser does not support iframes.</p>
 					</iframe>
 					</section>
