Add AngularJS mobile project

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -51,9 +51,11 @@
 					<ul class="actions special">
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
-					<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="border:4px;">
-					  <p>Your browser does not support iframes.</p>
-					</iframe>
+					<div style="width:100%;height:700px;overflow:hidden;">
+						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="border-width: 7px">
+						  <p>Your browser does not support iframes.</p>
+						</iframe>
+					</div>
 					</section>
 					
 					<section>
