--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -52,7 +52,7 @@
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
 					<div style="width:100%;height:700px;overflow:hidden;">
-						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background:black;padding:4px;">
+						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
 					</div>
