modify the iframe for the app

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -51,7 +51,7 @@
 					<ul class="actions special">
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
-					<div style="width:100%;height:700px;overflow:hidden;">
+					<div style="width:100%;height:60%;overflow:hidden;">
 						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
@@ -64,7 +64,7 @@
 							<li>API Engine - CodeIgniter</li>
 							<li>Mobile framework - Ionic framework v1.3</li>
 							<li>Main language used is AngularJS</li>
-							<li>Most of the underlying CSS is predefined by Ionic Framework buto i created custom CSS to adopt to my app designs </li>
+							<li>Most of the underlying CSS is predefined by Ionic Framework but I created custom CSS to adopt to my app designs </li>
 							<li>Development methodology - Modular development</li>
 						</ul>
 					</section>
