--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -51,7 +51,8 @@
 					<ul class="actions special">
 						<li><a class="button alt">Angular JS APP</a></li>
 					</ul>
-					<div style="width:100%;height:60%;overflow:hidden;">
+					<p>This is an hybrid app that i created using Ionic Framework, Ionic framework and CodeIgniter Engines for the backend API. Scroll down to see the whole view
+					<div style="width:60%;height:60%;overflow:hidden;">
 						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
