--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -53,7 +53,7 @@
 					</ul>
 					<p>This is an hybrid app that i created using Ionic Framework, Ionic framework and CodeIgniter Engines for the backend API. Scroll down to see the whole view
 					<div style="overflow:hidden;">
-						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="70%" height=""  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
+						<iframe src="http://johnmwenda.github.io/AngularJS-app/www/" width="100%" height="100"  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
 					</div>
