--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
 				<div class="inner">
 				<div class="spotlight">
 						<div class="image">
+							<a href="http://johnmwenda.github.io/AngularJS-app" target="_blank"><img src="images/mobileapp.jpg" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a href="http://johnmwenda.github.io/AngularJS-app" target="_blank">Mobile App using HTML5, AngularJS and Javascript</a></h3>
+							<p>Developed using Ionic Framework </p>
+							<p>App for a startup</p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div>
+				<div class="spotlight">
+						<div class="image">
 							<a href="http://triumphinchristministries.or.ke" target="_blank"><img src="images/triumphWebsite.png" alt="" /></a>
 						</div>
 						<div class="content">
