modify the iframe for the app

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<div class="inner">
 				<div class="spotlight">
 						<div class="image">
-							<a href="http://johnmwenda.github.io/AngularJS-app" target="_blank"><img src="images/mobileapp.jpg" alt="" /></a>
+							<a href="http://johnmwenda.github.io/AngularJS-app" target="_blank"><img src="images/mobileapp2.png" alt="" /></a>
 						</div>
 						<div class="content">
 							<h3><a href="http://johnmwenda.github.io/AngularJS-app" target="_blank">Mobile App using HTML5, AngularJS and Javascript</a></h3>
