--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="resume.html">Resume</a></li>
+					<li><a href="AngularJS-app/index.html">Angular JS Demo App</a></li>
 					<!-- <li><a href="elements.html">Elements</a></li> -->
 				</ul>
 			</nav>
@@ -69,7 +70,7 @@
 		
 		<!-- Two -->
 			<section id="two" class="wrapper style2 alt">
-					<ul class="actions special">
+					<ul class="actions special" style="margin-bottom: 15px;">
 						<li><a class="button alt">PROJECTS</a></li>
 					</ul>
 				<div class="inner">
@@ -80,7 +81,8 @@
 						<div class="content">
 							<h3><a href="http://johnmwenda.github.io/AngularJS-app" target="_blank">Mobile App using HTML5, AngularJS and Javascript</a></h3>
 							<p>Developed using Ionic Framework </p>
-							<p>App for a startup</p>
+							<p>This is an App for a virtual company</p>
+							<p><a style="color:red"href="http://johnmwenda.github.io/AngularJS-app">You can find the online demo here!!</a></p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
