AngularJS Demo App styling

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -54,7 +54,7 @@
 			</nav>
 
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner-john" class="banner-john" style="padding: 8px 0 0 0; ">
 				
 			</section>
 		
