--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<section id="one" class="wrapper">
 				<div class="inner split">
 					<section>
-						<h2>Welcome to my online portfolio</h2>
+						<h2>About Me</h2>
 						<p style="font-size:16px">A talented graduate developer with a strong academic background in Computer science and experience in IP Network administration. I have the necessary skills and knowledge to take a product through the full development cycle.
 						
 						I am looking for opportunities and jobs which will take my career to the next level. </p>
