AngularJS Demo App styling

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<ul class="checklist">
 							<li>PHP, and the Laravel framework</li>
 							<li>Joomla</li>
-							<li>Java</li>
+							<li>Javascript</li>
 							<li>CSS, HTML</li>
 						</ul>
 					</section>
