AngularJS Demo App styling

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -14,8 +14,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="../assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="../assets/css/ie9.css" /><![endif]-->
 		<style>
-			<style>
-				#wrapper { margin-left:9%; padding: 0; overflow: hidden; }
+				#wrapper { padding: 0; overflow: hidden; }
 				#scaled-frame { width: 500px; height: 800px; border: 0px; }
 				#scaled-frame {
 					zoom: 0.71;
@@ -30,9 +29,6 @@
 				@media screen and (-webkit-min-device-pixel-ratio:0) {
 				 #scaled-frame  { zoom: 1;  }
 				}
-		</style>
-
-
 		</style>
 	</head>
 	<body class="landing">
@@ -68,7 +64,7 @@
 					</ul>
 					<p>This is an hybrid app that i created using Ionic Framework, AngularJS and CodeIgniter Engines for the backend API. Scroll down to see the whole view. <br/>NB/Its just a proof of concept 
 					<div id="wrapper" style="width:100%;overflow:hidden;padding-left: 10%">
-						<iframe id="scaled-frame" src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background: #b9d8e4;padding: 5px;border-radius: 8px;">
+						<iframe id="scaled-frame" src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background-color: #b9d8e4; background-image: url('../images/loading.png');background-repeat: no-repeat; padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
 					</div>
