AngularJS Demo App styling

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -64,7 +64,7 @@
 					</ul>
 					<p>This is an hybrid app that i created using Ionic Framework, AngularJS and CodeIgniter Engines for the backend API. Scroll down to see the whole view. <br/>NB/Its just a proof of concept 
 					<div id="wrapper" style="width:100%;overflow:hidden;padding-left: 10%">
-						<iframe id="scaled-frame" src="http://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background-color: #b9d8e4; background-image: url('../images/loading.png');background-repeat: no-repeat; padding: 5px;border-radius: 8px;">
+						<iframe id="scaled-frame" src="https://johnmwenda.github.io/AngularJS-app/www/" width="400px" height="700px"  style="background-color: #b9d8e4; background-image: url('../images/loading.png');background-repeat: no-repeat; padding: 5px;border-radius: 8px;">
 						  <p>Your browser does not support iframes.</p>
 						</iframe>
 					</div>
