--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<a href="https://johnmwenda.github.io/AngularJS-app" target="_blank"><img src="images/mobileapp2.png" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="https://johnmwenda.github.io/AngularJS-app" target="_blank">Mobile App using HTML5, AngularJS and Javascript</a></h3>
+							<h3><a href="https://johnmwenda.github.io/AngularJS-app" target="_blank">Mobile App using HTML5, CSS and AngularJS</a></h3>
 							<p>Developed using Ionic Framework </p>
 							<p>This is an App for a virtual company</p>
 							<p><a style="color:red"href="https://johnmwenda.github.io/AngularJS-app">You can find the online demo here!!</a></p>
