--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<ul class="checklist">
 							<li>PHP, and the Laravel framework</li>
 							<li>Joomla</li>
-							<li>Javascript</li>
+							<li>Javascript, Angular JS, Bootstrap</li>
 							<li>CSS, HTML</li>
 						</ul>
 					</section>
@@ -74,6 +74,21 @@
 						<li><a class="button alt">PROJECTS</a></li>
 					</ul>
 				<div class="inner">
+					<div class="spotlight">
+						<div class="image">
+							<a ><img src="images/healthix2.png" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a  target="_blank">Healthix Solutions</a></h3>
+							<p>Developed using Angular and Bootstrap </p>
+							<p>This is a shared exchange platform to connect different players in the health sector</p>
+							<p><a style="color:red" href="">The system is still in development (warranting NDA)</a></p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div> 
+
 				<div class="spotlight">
 						<div class="image">
 							<a href="https://johnmwenda.github.io/AngularJS-app" target="_blank"><img src="images/mobileapp2.png" alt="" /></a>
@@ -88,7 +103,7 @@
 							</ul>
 						</div>
 					</div> 
-				<div class="spotlight">
+					<div class="spotlight">
 						<div class="image">
 							<a href="http://triumphinchristministries.or.ke" target="_blank"><img src="images/triumphWebsite.png" alt="" /></a>
 						</div>
@@ -101,14 +116,30 @@
 							</ul>
 						</div>
 					</div>
-				<div class="spotlight">
+
+					<div class="spotlight">
 						<div class="image">
-							<a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank"><img src="images/onlineBulk.jpg" alt="" /></a>
+							<a href="http://truthalivechapel.org" target="_blank"><img src="images/truthalivechapel.png" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="http://johnmwenda.net16.net/online-bulk-sms" target="_blank">Bulk SMS Sytem</a></h3>
+							<h3><a href="http://truthalivechapel.org" target="_blank">Truth Alive Chapel</a></h3>
+							<p>Developed using WordPress </p>
+							<p>Website for organization</p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div>
+
+				<div class="spotlight">
+						<div class="image">
+							<a  target="_blank"><img src="images/onlineBulk.jpg" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a target="_blank">Bulk SMS Sytem</a></h3>
 							<p>Developed using PHP </p>
 							<p>Allows a user to send bulk SMS online.</p>
+							<p style="color: orange">Sorry you cant preview this. Will be available on request</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
@@ -116,11 +147,12 @@
 					</div>
 					<div class="spotlight">
 						<div class="image">
-							<a href="http://nyerientrepreneurshipforum.org" target="_blank"><img src="images/nyeri.jpg" alt="" /></a>
+							<a target="_blank"><img src="images/nyeri.jpg" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="http://nyerientrepreneurshipforum.org" target="_blank">NYERI ENTREPRENEURSHIP FORUM</a></h3>
+							<h3><a target="_blank">NYERI ENTREPRENEURSHIP FORUM</a></h3>
 							<p>Developed using the Joomla CMS and PHP Customizations </p>
+							<p style="color: orange">Sorry you cant preview this. Will be available on request</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
@@ -133,6 +165,7 @@
 						<div class="content">
 							<h3><a href="http://voiceministries.co.ke" target="_blank">VOICE MINISTRIES INTERNATIONAL</a></h3>
 							<p>Developed using the Joomla CMS. I made my own template for this site.</p>
+							<p style="color: orange">Sorry you cant preview this. The owner didnt renew the domain name</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
@@ -140,12 +173,13 @@
 					</div>
 					<div class="spotlight">
 						<div class="image">
-							<a href="http://goo.gl/sgG9Ey" target="_blank"><img src="images/onedesire.jpg" alt="" /></a>
+							<a target="_blank"><img src="images/onedesire.jpg" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="http://goo.gl/sgG9Ey" target="_blank">One Desire</a></h3>
+							<h3><a target="_blank">One Desire</a></h3>
 							<p>Developed using Joomla CMS. </p>
 							<p>NB/The website is still not yet commissioned and am therefore hosting it as a subdomain of another site.</p>
+							<p style="color: orange">Sorry you cant preview this. Will be available on request</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
