--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
 					<header class="major special">
 						<h2>Resume</h2>
 					</header>
-					<iframe src="images/Resume.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
+					<iframe src="images/CV.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
 
 
 				</div>
