python, django expert

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<img src="images/john.jpg"/>
 				</a>
 				<h2>ONLINE PORTFOLIO</h2>
-				<p>PHP, LARAVEL, JAVA, JOOMLA</p>
+				<p>PHP,PYTHON (Django), JAVA, JOOMLA</p>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button big special">Learn More</a></li>
 				</ul> JOHN-EDIT-->
@@ -59,6 +59,7 @@
 					<section>
 						<h3>Skills</h3>
 						<ul class="checklist">
+							<li>Python and Django framework</li>
 							<li>PHP, and the Laravel framework</li>
 							<li>Joomla</li>
 							<li>Javascript, Angular JS, Bootstrap</li>
@@ -80,7 +81,7 @@
 						</div>
 						<div class="content">
 							<h3><a  target="_blank">Healthix Solutions</a></h3>
-							<p>Developed using Angular and Bootstrap </p>
+							<p>Developed using Angular, Bootstrap, and Python Backend </p>
 							<p>This is a shared exchange platform to connect different players in the health sector</p>
 							<p><a style="color:red" href="">The system is still in development (warranting NDA)</a></p>
 							<ul class="actions">
