--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<img src="images/john.jpg"/>
 				</a>
 				<h2>ONLINE PORTFOLIO</h2>
-				<p>PHP,PYTHON (Django), JAVA, JOOMLA</p>
+				<p>PYTHON (Django), JAVASCRIPT, PHP(Laravel)</p>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button big special">Learn More</a></li>
 				</ul> JOHN-EDIT-->
