--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
 						<li><a class="button alt">PROJECTS</a></li>
 					</ul>
 				<div class="inner">
+				<div class="spotlight">
+						<div class="image">
+							<a ><img src="images/taskmanagement.png" alt="" /></a>
+						</div>
+						<div class="content">
+							<h3><a  target="_blank">Task Management System</a></h3>
+							<p>Developed using Angular and Laravel Backend </p>
+							<p>A sample Tasks Management Application. Its hosted on heroku. And API based, with all rendering done by AngularJS. It might take a few more seconds to load because its on a free hosting plan</p>
+							<ul class="actions">
+								<li><a href="#" class="button alt">Details</a></li>
+							</ul>
+						</div>
+					</div> 
+
+
 					<div class="spotlight">
 						<div class="image">
 							<a ><img src="images/healthix2.png" alt="" /></a>
