--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="inner">
 				<div class="spotlight">
 						<div class="image">
-							<a ><img src="images/taskmanagement.png" alt="" /></a>
+							<a ><img href="https://cytonn-web-app.herokuapp.com/#/create-task" src="images/taskmanagement.png" alt="" /></a>
 						</div>
 						<div class="content">
 							<h3><a  target="_blank">Task Management System</a></h3>
