--- a/index.html
+++ b/index.html
@@ -75,14 +75,25 @@
 						<li><a class="button alt">PROJECTS</a></li>
 					</ul>
 				<div class="inner">
-				<div class="spotlight">
+				<div class="spotlight"> 
 						<div class="image">
-							<a ><img href="https://cytonn-web-app.herokuapp.com/#/create-task" src="images/taskmanagement.png" alt="" /></a>
+							<a href="http://cytonn-web-app.herokuapp.com" target="_blank"><img href="https://cytonn-web-app.herokuapp.com/#/create-task" src="images/taskmanagement.png" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a  target="_blank">Task Management System</a></h3>
+							<h3><a href="http://cytonn-web-app.herokuapp.com" target="_blank">Task Management System</a></h3>
 							<p>Developed using Angular and Laravel Backend </p>
 							<p>A sample Tasks Management Application. Its hosted on heroku. And API based, with all rendering done by AngularJS. It might take a few more seconds to load because its on a free hosting plan</p>
+							<p>Sample demo users:</p>
+							<style type="text/css">
+								.roles_users .black{
+									color: black
+								}
+							</style>
+							<p class="roles_users">
+								user1=><b class="black" style="color:black">victor@gmail.com</b class="black" style="color:black">, password=><b class="black" style="color:black">victor123</b class="black" style="color:black">, role=>normal user
+								user2=><b class="black" style="color:black">brenda@gmail.com,</b class="black" style="color:black"> password=><b class="black" style="color:black">password</b class="black" style="color:black">, role=>nomal user
+								user3=><b class="black" style="color:black">alice@gmail.com,</b class="black" style="color:black"> password=<b class="black" style="color:black">alice123,</b class="black" style="color:black"> role=> department head
+							</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
@@ -96,7 +107,7 @@
 						</div>
 						<div class="content">
 							<h3><a  target="_blank">Healthix Solutions</a></h3>
-							<p>Developed using Angular, Bootstrap, and Python Backend </p>
+							<p>Developed using Angular, Bootstrap, and Python Backend. I was involved as a Lead Front End Developer and created most, if not all of the UI</p>
 							<p>This is a shared exchange platform to connect different players in the health sector</p>
 							<p><a style="color:red" href="">The system is still in development (warranting NDA)</a></p>
 							<ul class="actions">
