fix cytonn link

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 				<div class="inner">
 				<div class="spotlight"> 
 						<div class="image">
-							<a href="https://cytonn-web-app.herokuapp.com" target="_blank"><img src="images/taskmanagement.png" alt="" /></a>
+							<a href="https://cytonn-web-app.herokuapp.com/" target="_blank"><img src="images/taskmanagement.png" alt="" /></a>
 						</div>
 						<div class="content">
-							<h3><a href="https://cytonn-web-app.herokuapp.com/#/create-task" target="_blank">Task Management System.</a></h3>
+							<h3><a href="https://cytonn-web-app.herokuapp.com/" target="_blank">Task Management System.</a></h3>
 							<p>Developed using Angular and Laravel Backend </p>
 							<p>A sample Tasks Management Application. Its hosted on heroku. And API based, with all rendering done by AngularJS. It might take a few more seconds to load because its on a free hosting plan</p>
 							<p>Sample demo users:</p>
