path to senior developer

--- a/AngularJS-app/index.html
+++ b/AngularJS-app/index.html
@@ -77,8 +77,7 @@
 							<li>Mobile framework - Ionic framework v1.3</li>
 							<li>Main language used is AngularJS</li>
 							<li>Most of the underlying CSS is predefined by Ionic Framework but I created custom CSS to adopt to my app designs </li>
-							<li>Development methodology - Modular development</li>
-							<p>NB:/ I have disabled the API calls to authentication server because of some issues with github host and replaced it with local authentication, that is<br>  <code>if(admin===admin)<br>{login:true}<br>else(login:false)</code>
+							<li>Development methodology - Modular development</li><br>  <code>user:admin password:admin</code>
 						</ul>
 					</section>
 					
