--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 							</ul>
 						</div>
 					</div> 
-					<div class="spotlight">
+					<!-- <div class="spotlight">
 						<div class="image">
 							<a href="http://triumphinchristministries.or.ke" target="_blank"><img src="images/triumphWebsite.png" alt="" /></a>
 						</div>
@@ -211,7 +211,7 @@
 								<li><a href="#" class="button alt">Details</a></li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 					
 				</div>
 			</section>
