--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
 						}
 					</style>
 					<p class="roles_users">
-						user1=><b class="black" style="color:black">victor@gmail.com</b class="black"
+						<span>user1=><b class="black" style="color:black">victor@gmail.com</b class="black"
 							style="color:black">, password=><b class="black" style="color:black">victor123</b
-							class="black" style="color:black">, role=>normal user
-						user2=><b class="black" style="color:black">george@gmail.com,</b class="black"
+							class="black" style="color:black">, role=>normal user </span><br/>
+						<span>user2=><b class="black" style="color:black">george@gmail.com,</b class="black"
 							style="color:black"> password=><b class="black" style="color:black">george123</b
-							class="black" style="color:black">, role=>department head
-						user3=><b class="black" style="color:black">angie@gmail.com</b class="black"
+							class="black" style="color:black">, role=>department head</span> <br/>
+						<span>user3=><b class="black" style="color:black">angie@gmail.com</b class="black"
 							style="color:black">, password=><b class="black" style="color:black">password</b
-							class="black" style="color:black">, role=>normal user
-						user1=><b class="black" style="color:black">mark@gmail.com</b class="black"
+							class="black" style="color:black">, role=>normal user </span> <br/>
+						<span>user4=><b class="black" style="color:black">mark@gmail.com</b class="black"
 							style="color:black">, password=><b class="black" style="color:black">mark123</b
-							class="black" style="color:black">, role=>department head
+							class="black" style="color:black">, role=>department head </span><br/>
 					</p>
 					<ul class="actions">
 						<li><a href="#" class="button alt">Details</a></li>
