--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<!-- Banner -->
 	<section id="banner">
 		<a href="#" class="image-john">
-			<img src="images/IMG_20210211_085234.jpg" />
+			<img src="images/LinkedIn1.jpg" />
 		</a>
 		<h2>ONLINE PORTFOLIO</h2>
 		<p>PYTHON (Django), JAVASCRIPT, PHP(Laravel)</p>
