--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 		<div class="inner">
 			<div id="tasksystem" class="spotlight">
 				<div class="image">
-					<a href="http://ec2-3-91-51-216.compute-1.amazonaws.com" target="_blank"><img
+					<a href="http://3.91.51.216" target="_blank"><img
 							src="images/taskmanagement.png" alt="" /></a>
 				</div>
 				<div class="content">
-					<h3><a href="http://ec2-3-91-51-216.compute-1.amazonaws.com" target="_blank">Task Management
+					<h3><a href="http://3.91.51.216" target="_blank">Task Management
 							System.</a></h3>
 					<p>Developed using Angular and Laravel Backend </p>
 					<p>A sample Tasks Management Application. Its hosted on AWS EC2. Since it's a demo project, it's not
