--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<p>A sample Tasks Management Application. Its hosted on AWS EC2. Since it's a demo project, it's not
 						running SSL. The project is API based, with all rendering done by AngularJS.</p>
 					<p>Sample demo users:</p>
-					<p>The demo system can be accessed on this link: <a href="http://ec2-54-198-248-66.compute-1.amazonaws.com" target="_blank">Task management web app</a>
+					<p>The demo system can be accessed on this link: <a href="http://3.91.51.216/" target="_blank">Task management web app</a>
 					<style type="text/css">
 						.roles_users .black {
 							color: black
