--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<div class="content">
 					<h3><a target="_blank">Healthix Solutions</a></h3>
 					<p>Developed using Angular, Bootstrap, and Python Backend. I was involved as a Lead Front End
-						Developer and created most, if not all of the UI</p>
+						Developer and created most of the UI</p>
 					<p>This is a shared exchange platform to connect different players in the health sector</p>
 					<p><a style="color:red" href="">The system is still in development (warranting NDA)</a></p>
 					<ul class="actions">
